syntax = "proto3";

//import "org/monarchinitiative/exomiser/core/schema/model.proto";

option java_package = "org.monarchinitiative.exomiser.core.proto";
option java_outer_classname = "AlleleProto";
//option java_multiple_files = true;

message AlleleKey {
    int32 chr = 1;
    int32 position = 2;
    string ref = 3;
    string alt = 4;
}

message AlleleProperties {
    string rs_id = 1;
    map<string, float> properties = 2;
    //TODO: move to model or somewhere and then import here - this is also needed for output in results
    ClinVar clinVar = 3;
}

message ClinVar {
    enum ClinSig {
        //default
        NOT_PROVIDED = 0;
        // ACMG/AMP-based
        BENIGN = 1;
        BENIGN_OR_LIKELY_BENIGN = 2;
        LIKELY_BENIGN = 3;
        UNCERTAIN_SIGNIFICANCE = 4;
        LIKELY_PATHOGENIC = 5;
        PATHOGENIC_OR_LIKELY_PATHOGENIC = 6;
        PATHOGENIC = 7;
        CONFLICTING_PATHOGENICITY_INTERPRETATIONS = 8;
        //Non-ACMG-based
        AFFECTS = 9;
        ASSOCIATION = 10;
        DRUG_RESPONSE = 11;
        OTHER = 12;
        PROTECTIVE = 13;
        RISK_FACTOR = 14;
    }

    string alleleId = 1;
    ClinSig primaryInterpretation = 2;
    repeated ClinSig secondaryInterpretations = 3;
    string reviewStatus = 4;
    map<string, ClinSig> includedAlleles = 5;
    string variationId = 6;
    string gene_symbol = 7;
    string gene_id = 8;
    VariantEffect variant_effect = 9;
    string hgvs_cdna = 10;
    string hgvs_protein = 11;
    map<string, uint32> clin_sig_counts = 12; //CLNSIGCONF
}

enum VariantEffect {
    SEQUENCE_VARIANT = 0; // n.b. this is the LOWEST value in the jannovar enum
    CHROMOSOME_NUMBER_VARIATION = 1;
    TRANSCRIPT_ABLATION = 2;
    EXON_LOSS_VARIANT = 3;
    INVERSION = 4;
    INSERTION = 5;
    TRANSLOCATION = 6;
    FRAMESHIFT_ELONGATION = 7;
    FRAMESHIFT_TRUNCATION = 8;
    FRAMESHIFT_VARIANT = 9;
    INTERNAL_FEATURE_ELONGATION = 10;
    FEATURE_TRUNCATION = 11;
    TRANSCRIPT_AMPLIFICATION = 12;
    COPY_NUMBER_CHANGE = 13;
    MNV = 14;
    COMPLEX_SUBSTITUTION = 15;
    STOP_GAINED = 16;
    STOP_LOST = 17;
    START_LOST = 18;
    SPLICE_ACCEPTOR_VARIANT = 19;
    SPLICE_DONOR_VARIANT = 20;
    RARE_AMINO_ACID_VARIANT = 21;
    MISSENSE_VARIANT = 22;
    INFRAME_INSERTION = 23;
    DISRUPTIVE_INFRAME_INSERTION = 24;
    INFRAME_DELETION = 25;
    DISRUPTIVE_INFRAME_DELETION = 26;
    FIVE_PRIME_UTR_TRUNCATION = 27;
    THREE_PRIME_UTR_TRUNCATION = 28;
    SPLICE_REGION_VARIANT = 30;
    STOP_RETAINED_VARIANT = 31;
    INITIATOR_CODON_VARIANT = 32;
    SYNONYMOUS_VARIANT = 33;
    CODING_TRANSCRIPT_INTRON_VARIANT = 34;
    FIVE_PRIME_UTR_PREMATURE_START_CODON_GAIN_VARIANT = 35;
    FIVE_PRIME_UTR_EXON_VARIANT = 36;
    THREE_PRIME_UTR_EXON_VARIANT = 37;
    FIVE_PRIME_UTR_INTRON_VARIANT = 38;
    THREE_PRIME_UTR_INTRON_VARIANT = 39;
    NON_CODING_TRANSCRIPT_EXON_VARIANT = 40;
    NON_CODING_TRANSCRIPT_INTRON_VARIANT = 41;
    DIRECT_TANDEM_DUPLICATION = 42;
    MOBILE_ELEMENT_DELETION = 43;
    MOBILE_ELEMENT_INSERTION = 44;
    UPSTREAM_GENE_VARIANT = 45;
    DOWNSTREAM_GENE_VARIANT = 46;
    INTERGENIC_VARIANT = 47;
    TFBS_ABLATION = 48;
    TFBS_AMPLIFICATION = 49;
    TF_BINDING_SITE_VARIANT = 50;
    REGULATORY_REGION_VARIANT = 51;
    REGULATORY_REGION_ABLATION = 52;
    REGULATORY_REGION_AMPLIFICATION = 53;
    CONSERVED_INTRON_VARIANT = 54;
    INTRAGENIC_VARIANT = 55;
    CONSERVED_INTERGENIC_VARIANT = 56;
    STRUCTURAL_VARIANT = 57;
    CODING_SEQUENCE_VARIANT = 58;
    INTRON_VARIANT = 59;
    EXON_VARIANT = 60;
    SPLICING_VARIANT = 61;
    MIRNA = 62;
    CODING_TRANSCRIPT_VARIANT = 63;
    NON_CODING_TRANSCRIPT_VARIANT = 64;
}